add UserRestControllerV1 Test